Update DisenchantPriority.java